# ChangeLog for app-text/txt2man
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/txt2man/ChangeLog,v 1.15 2008/05/24 08:56:25 drac Exp $

*txt2man-1.5.5 (24 May 2008)

  24 May 2008; Samuli Suominen <drac@gentoo.org> +txt2man-1.5.5.ebuild:
  Version bump; with new tools bookman and src2man.

  14 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Charlie Shepherd (masterdriverz, #153940) from metadata.xml.

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  26 Nov 2006; Charlie Shepherd <masterdriverz@gentoo.org> metadata.xml:
  Taking this over from Flameeyes...

  21 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> metadata.xml:
  Give back to maintainer-needed.

*txt2man-1.5.1 (26 Oct 2006)

  26 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> +txt2man-1.5.1.ebuild:
  Version bump.

*txt2man-1.5 (16 Oct 2006)

  16 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> +txt2man-1.5.ebuild:
  Version bump

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org> txt2man-1.4.8-r1.ebuild:
  add ~alpha ~ia64

*txt2man-1.4.8-r1 (27 Jul 2005)

  27 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
  +files/txt2man-1.4.8-debian.patch, -txt2man-1.4.8.ebuild,
  +txt2man-1.4.8-r1.ebuild:
  Added patch from Debian for hyphens escaping. Thanks to Fredrik Steen
  <stone@debian.org> (Debian maintainer) and Wesley J. Landaker (original
  submitter of the patch).

  25 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> txt2man-1.4.8.ebuild:
  ~sparc as a dep for bug #100058

  24 Jul 2005; David Holm <dholm@gentoo.org> txt2man-1.4.8.ebuild:
  Added to ~ppc.

  24 Jul 2005; Markus Rothe <corsair@gentoo.org> txt2man-1.4.8.ebuild:
  added ~ppc64

  23 Jul 2005; Tony Vroon <chainsaw@gentoo.org> txt2man-1.4.8.ebuild:
  Added ~x86 keyword.

*txt2man-1.4.8 (22 Jul 2005)

  22 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +txt2man-1.4.8.ebuild:
  Adding txt2man.
