@@ -1,10 +1,10 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/txt2man/txt2man-1.5.5.ebuild,v 1.1 2008/05/24 08:56:25 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/txt2man/txt2man-1.5.5.ebuild,v 1.2 2008/05/25 10:54:51 drac Exp $
 
 EAPI="prefix"
 
-DESCRIPTION="A simple script to convert ASCII text to man page."
+DESCRIPTION="txt2man, src2man (C only) and bookman convert scripts for man pages."
 HOMEPAGE="http://mvertes.free.fr/"
 SRC_URI="http://mvertes.free.fr/download/${P}.tar.gz"
 
