@@ -1,6 +1,10 @@
 # ChangeLog for app-text/txt2man
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/txt2man/ChangeLog,v 1.15 2008/05/24 08:56:25 drac Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/txt2man/ChangeLog,v 1.16 2008/05/25 10:54:51 drac Exp $
+
+  25 May 2008; Samuli Suominen <drac@gentoo.org> -txt2man-1.5.1.ebuild,
+  txt2man-1.5.5.ebuild:
+  Fix description and remove old.
 
 *txt2man-1.5.5 (24 May 2008)
 
